# WebGL

./: Example_Colour.html  Exercise1.html  Exercise1.js  FragmentShader.glsl  VertexShader.glsl
SW1/: Exercise1.html  Exercise1.js
SW2/: Exercise1.html
SW2/Farbverlauf/: Exercise1.html  Exercise1.js  VertexShader.glsl
SW2/TextureMapping/: FragmentShader.glsl  TextureMapping.js  VertexShader.glsl  index.html
SW3/: CMakeLists.txt  Exercise1.html  Exercise2.js  FragmentShader.glsl  VertexShader.glsl
SW5/: FragmentShader.glsl  WireFrame.html  WireFrame.js
SW6/: ColorCube.js  FragmentShader.glsl  RotatingCube.html  RotatingCubes.html  RotatingCubes.js  TextureCube.js  VertexShader.glsl  WireCube.js  WireFrame.html  WireFrame.js
SW8/: Beleuchtung.html  Beleuchtung.js  FragmentShader.glsl  VertexShader.glsl  coloredCube.js  solidSphere.js
WebGL_Bruno/: Exercise1.html  Exercise6.js  FragmentShader.glsl  SolidCube.js  VertexShader.glsl  WireFrameCube.js  solidSphere.js
WegGL_Oli/webgl_start/: CMakeLists.txt  Exercise1.html  Exercise5.js  FragmentShader.glsl  VertexShader.glsl  cube.js  cube_textured.js  gl-matrix.js  webgl-debug.js  wireFrameCube.js
